--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@
 /wildfire-camera-detection-keras-v2-training-reshuffle.ipynb
 /wildfire-camera-detection-keras-v2-with-validation.ipynb
 /__pycache__
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
+*.tiff
+*.svg
