Fixes to model evaluation and training params adjustment

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /dataset_2
 /forest_fire
 /req_cmd.txt
+/runs
 /venv
 /wildfire-camera-detection-keras-v2-training-reshuffle.ipynb
 /wildfire-camera-detection-keras-v2-with-validation.ipynb
