--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /wildfire-camera-detection-keras-v2-training-reshuffle.ipynb
 /wildfire-camera-detection-keras-v2-with-validation.ipynb
 /__pycache__
+/tmp
 *.jpg
 *.jpeg
 *.png
