--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@
 /runs
 /venv
 /checkpoint
-/wildfire-camera-detection-keras-v2-training-reshuffle.ipynb
-/wildfire-camera-detection-keras-v2-with-validation.ipynb
+/Junk
 /__pycache__
 /tmp
 *.jpg
